Add sponsor block, auto repeat, and ad blocker features to YouTube Vanced Plugin; enhance popup UI with tabbed navigation for better user experience. Introduce storage utility for centralized settings management.

--- a/manifest.json
+++ b/manifest.json
@@ -23,7 +23,8 @@
     "service_worker": "background.js"
   },
   "host_permissions": [
-    "*://*.youtube.com/*"
+    "*://*.youtube.com/*",
+    "https://sponsor.ajay.app/*"
   ],
   "web_accessible_resources": [
     {
