refactor: convert synchronous format fetching to asynchronous, improve error handling, and enhance format filtering in YouTube Vanced Plugin. Update manifest to include new API host permissions for better functionality.

--- a/manifest.json
+++ b/manifest.json
@@ -26,7 +26,8 @@
   "host_permissions": [
     "*://*.youtube.com/*",
     "https://sponsor.ajay.app/*",
-    "*://*.googlevideo.com/*"
+    "*://*.googlevideo.com/*",
+    "https://pipedapi.kavin.rocks/*"
   ],
   "web_accessible_resources": [
     {
